# xtts-api-server

./: README.md  install_FFmpeg.bat  launcher.bat  launcher_blackwell_gpu.bat  pyproject.toml  requirements.txt
xtts_api_server/: modeldownloader.py
xtts_api_server/RealtimeTTS/engines/: __init__.py  safepipe.py
