[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "xtts-api-server"
version = "0.9.0"
authors = [
  { name="daswer123", email="daswerq123@gmail.com" },
]
description = "A simple FastAPI server to host XTTSv2"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "PyAudio",
  "requests",
  "pyttsx3",
  "stream2sentence",
  "fastapi>=0.104.1",
  "loguru",
  "pydantic",
  "pydub",
  "python-dotenv",
  "torch",
  "torchaudio",
  "uvicorn",
  "cutlet",
  'fugashi[unidic-lite]',
  'coqui-tts==0.26.0',
  'transformers==4.48.0',
  "uuid",
  "spacy==3.7.5",
  "resampy",
]

[project.urls]
Homepage = "https://github.com/daswer123/xtts-api-server"
"Bug Tracker" = "https://github.com/daswer123/xtts-api-server/issues"

[tool.hatch.build.targets.wheel]
only-include=["xtts_api_server"]
